welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:25: error: ';' expected but 'else' found.
		else {
                ^